AssertJ with Java 8

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0    	http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.danielme.blog</groupId>
@@ -6,13 +7,13 @@
 	<version>1.0</version>
 	<name>Junit 4 Demo</name>
 	<inceptionYear>2016</inceptionYear>
-	<url>https://danielme.com/2016/09/07/tutorial-testing-con-junit-4/</url>	
+	<url>https://danielme.com/2016/09/07/tutorial-testing-con-junit-4/</url>
 	<packaging>jar</packaging>
 
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.java>1.7</project.build.java>
+		<project.build.java>1.8</project.build.java>
 		<plugin.compiler.version>3.2</plugin.compiler.version>
 		<junit.version>4.12</junit.version>
 		<junitparams.version>1.0.5</junitparams.version>
@@ -41,6 +42,14 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<!-- use 2.9.1 for Java 7 projects -->
+			<version>3.11.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
